# dsbr

./: .gitignore  DOCUMENTATION_SETUP.md  DSBR_ARCHITECTURE_COMPLETE.md  DSBR_CODE_CONVENTIONS.md  DSBR_CRATES_EXPLORATION_FINDINGS.md  DSBR_CRATE_CATALOG.md  DSBR_DATAFUSION_STRATEGY.md  DSBR_IMPLEMENTATION_ROADMAP.md  DSBR_MASTER_PLAN.md  DSBR_PHASE1_DETAILED_SPEC.md  DURATION_DATETIME_IMPLEMENTATION_SUMMARY.md  duration_datetime_integration_suggestions.md  enhanced_datetime_api.rs  example_datetime_wrapper.rs  example_duration_with_datetime.rs  justfile  simple_duration_datetime_integration.md  yymm_format_enhancement.md
.kilocode/: mcp.json
docs/: README.md  book.toml
docs/book/: 404.html  changelog.html  introduction.html  license.html  print.html  searchindex.js  toc.html  toc.js
docs/book/advanced/: arrow.html  performance.html  polars.html  testing.html
docs/book/api/: core.html  domain.html  utils.html
docs/book/contributing/: documentation.html  setup.html  style.html  testing.html
docs/book/core/: architecture.html  domain-models.html  error-handling.html  result-types.html
docs/book/data/: file-handling.html  parsing.html  schemas.html
docs/book/examples/: basic.html  custom-parsers.html  ftp-processing.html  pipeline.html
docs/book/getting-started/: configuration.html  installation.html  quick-start.html
docs/book/io/: filesystem.html  ftp.html  s3.html
docs/book/utils/: meta.html  path.html  time.html
docs/book/utils/time/: month.html
docs/src/: SUMMARY.md  introduction.md
docs/src/advanced/: arrow.md  polars.md
docs/src/api/: domain.md
docs/src/core/: result-types.md
docs/src/examples/: custom-parsers.md  ftp-processing.md  pipeline.md
docs/src/getting-started/: installation.md
docs/src/io/: filesystem.md  ftp.md  s3.md
docs/src/utils/: meta.md  path.md  time.md
docs/src/utils/time/: month.md
docs/theme/: custom.css  custom.js
old/dsbr_core/src/core/: error.rs
old/dsbr_core/src/domain/: file.rs  info.rs
old/dsbr_core/src/utils/path/: error.rs  mod.rs
old/dsbr_core/src/utils/time/day/: tests.rs
old/dsbr_core/src/utils/time/year/: tests.rs
rust/: Cargo.toml
rust/crates/as_shared/: Cargo.toml
rust/crates/as_shared/src/: lib.rs
rust/crates/as_shared/src/core/: error.rs  mod.rs  path.rs  result.rs
rust/crates/as_shared/src/domain/: file.rs  info.rs
rust/crates/as_shared/src/utils/: error.rs  mod.rs  path.rs
rust/crates/as_shared/src/utils/path/: error.rs  mod.rs  tests.rs  traits.rs
rust/crates/as_shared/src/utils/time/: error.rs  mod.rs  month.rs  year.rs
rust/crates/as_shared/src/utils/time/datetime/: error.rs  mod.rs  tests.rs  traits.rs
rust/crates/as_shared/src/utils/time/day/: mod.rs  traits.rs
rust/crates/as_shared/src/utils/time/duration/: error.rs  mod.rs
rust/crates/as_shared/src/utils/time/month/: mod.rs  tests.rs  traits.rs
rust/crates/as_shared/src/utils/time/year/: error.rs  mod.rs
rust/crates/dsbr_core/: Cargo.toml
rust/crates/dsbr_core/src/: md_rust_patterns.md
rust/crates/dsbr_core/src/domain/: mod.rs
rust/crates/dsbr_core/src/utils/time/datetime/: integration_tests.rs  mod.rs
rust/crates/dsbr_core/src/utils/time/day/: error.rs  mod.rs
rust/crates/dsbr_core/src/utils/time/duration/: tests.rs  traits.rs
rust/crates/dsbr_core/src/utils/time/month/: error.rs  mod.rs
rust/crates/dsbr_core/src/utils/time/year/: mod.rs  traits.rs
scripts/: build-docs.sh
