[workspace]
resolver = "3"
members = ["crates/dsbr_core"]

[workspace.package]
edition = "2024"
authors = ["wrath-codes and contributors"]
license = "MIT"
repository = "https://github.com/wrath-codes/dsbr"
homepage = "https://github.com/wrath-codes/dsbr"
documentation = "https://docs.rs/dsbr-core"
readme = "README.md"
keywords = ["dsbr", "data", "parsing", "polars"]
categories = ["data-structures", "parsing", "database"]

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
aws-config = {version = "1.8.5", features = ["rustls"]}
aws-sdk-s3 = {version = "1.23.1", features = ["rustls"]}
arrow = { version = "56.0.0", features = ["ipc", "chrono-tz", "ffi"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
bytes = {version = "1.4.0", features = ["serde"]}
dashmap = {version = "6.1.0", features = ["serde", "inline"]}
itertools = {version = "0.14.0"}
criterion = {version = "0.7.0", features = ["async_tokio"]}
pretty_assertions = {version = "1.4.0"}
proptest = {version = "1.3.0", features = ["std"]}
tracing = {version = "0.1.37", features = ["log"]}
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
thiserror = "2.0"
url = {version = "2.5.4", features = ["serde"]}
suppaftp = { version = "6.3.0", features = ["async-rustls"] }
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = "0.26.2"
futures = "0.3.31"
regex = "1.11.1"
anyhow = "1.0.98"
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
lazy_static = "1.4"
log = "0.4"
dirs = "6.0.0"
rayon = "1.10.0"
once_cell = "1.21.3"
env_logger = "0.11"
num_cpus = "1.16"
indicatif = {version = "0.18.0", features = ["rayon"]}
console = "0.16.0"
encoding_rs = "0.8.35"
encoding = "0.2"
explode = "0.1.2"
dbase = "0.6.0"
polars = { version = "0.50.0", features = [
    "lazy",
    "temporal",
    "timezones",
    "strings", 
    "dtype-full",
    "serde",
    "csv",
    "parquet",
    "regex"
], default-features = false }
polars-io = "0.50.0"
polars-arrow = "0.50.0"
